@@ -7,7 +7,6 @@ import com.networknt.schema.JsonSchemaFactory;
 import com.networknt.schema.SpecVersion;
 import com.networknt.schema.ValidationMessage;
 import fr.insee.genesis.controller.dto.rawdata.LunaticJsonRawDataUnprocessedDto;
-import fr.insee.genesis.domain.model.surveyunit.InterrogationId;
 import fr.insee.genesis.domain.model.surveyunit.Mode;
 import fr.insee.genesis.domain.model.surveyunit.rawdata.DataProcessResult;
 import fr.insee.genesis.domain.model.surveyunit.rawdata.LunaticJsonRawDataModel;
@@ -29,10 +28,10 @@ import org.springframework.web.bind.annotation.RequestParam;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Controller
@@ -40,6 +39,8 @@ import java.util.Set;
 public class RawResponseController {
 
     private static final String SUCCESS_MESSAGE = "Interrogation %s saved";
+    private static final String PARTITION_ID = "partitionId";
+    private static final String INTERROGATION_ID = "interrogationId";
     private final LunaticJsonRawDataApiPort lunaticJsonRawDataApiPort;
     
     public RawResponseController(LunaticJsonRawDataApiPort lunaticJsonRawDataApiPort) {
@@ -53,7 +54,7 @@ public class RawResponseController {
 
             @RequestParam("campaignName") String campaignName,
             @RequestParam("questionnaireId") String questionnaireId,
-            @RequestParam("interrogationId") String interrogationId,
+            @RequestParam(INTERROGATION_ID) String interrogationId,
             @RequestParam(value = "surveyUnitId", required = false) String idUE,
             @RequestParam(value = "mode") Mode modeSpecified,
             @RequestBody Map<String, Object> dataJson
@@ -97,12 +98,8 @@ public class RawResponseController {
                             new ObjectMapper().writeValueAsString(body)
                     )
             );
-            if(!errors.isEmpty()){
-                throw new GenesisException(400, "Input data json is not valid \n%s".formatted(
-                        Arrays.toString(errors.toArray()))
-                );
-            }
-
+            // Throw Genesis exception if errors are present
+            validate(errors);
             //Check required ids
             checkRequiredIds(body);
         }catch (JsonProcessingException jpe){
@@ -112,9 +109,9 @@ public class RawResponseController {
         }
 
         LunaticJsonRawDataModel rawData = LunaticJsonRawDataModel.builder()
-                .campaignId(body.get("partitionId").toString())
+                .campaignId(body.get(PARTITION_ID).toString())
                 .questionnaireId(body.get("questionnaireModelId").toString())
-                .interrogationId(body.get("interrogationId").toString())
+                .interrogationId(body.get(INTERROGATION_ID).toString())
                 .idUE(body.get("surveyUnitId").toString())
                 .mode(Mode.getEnumFromJsonName(body.get("mode").toString()))
                 .data(body)
@@ -126,23 +123,9 @@ public class RawResponseController {
             return ResponseEntity.status(500).body("Unexpected error");
         }
 
-        log.info("Data saved for interrogationId {} and partition {}",body.get("interrogationId").toString(),
-                body.get("partitionId").toString());
-        return ResponseEntity.status(201).body(String.format(SUCCESS_MESSAGE,body.get("interrogationId").toString()));
-    }
-
-    private void checkRequiredIds(Map<String, Object> body) throws GenesisException {
-        for(String requiredKey : List.of(
-                "partitionId",
-                "questionnaireModelId",
-                "interrogationId",
-                "surveyUnitId",
-                "mode"
-        )){
-            if(body.get(requiredKey) == null){
-                throw new GenesisException(400, "No %s found in body".formatted(requiredKey));
-            }
-        }
+        log.info("Data saved for interrogationId {} and partition {}",body.get(INTERROGATION_ID).toString(),
+                body.get(PARTITION_ID).toString());
+        return ResponseEntity.status(201).body(String.format(SUCCESS_MESSAGE,body.get(INTERROGATION_ID).toString()));
     }
 
     //GET unprocessed
@@ -158,7 +141,7 @@ public class RawResponseController {
     @GetMapping(path= "/lunatic-json/get/by-interrogation-mode-and-campaign")
     @PreAuthorize("hasRole('ADMIN')")
             public ResponseEntity<LunaticJsonRawDataModel> getJsonRawData(
-                @RequestParam("interrogationId") String interrogationId,
+                @RequestParam(INTERROGATION_ID) String interrogationId,
                 @RequestParam("campaignName") String campaignName,
                 @RequestParam(value = "mode") Mode modeSpecified
             ){
@@ -195,10 +178,37 @@ public class RawResponseController {
     public ResponseEntity<Map<String, List<String>>> getProcessedDataIdsSinceHours(
             @RequestParam("questionnaireId") String questionnaireId,
             @RequestParam(name = "sinceHours", defaultValue = "24") int hours
-    ){
-        log.info("Retrieve ids of data processed in last {}h",hours);
+    ) {
+        log.info("Retrieve ids of data processed in last {}h", hours);
         Map<String, List<String>> result = lunaticJsonRawDataApiPort.findProcessedIdsgroupedByQuestionnaireSince(LocalDateTime.now().minusHours(hours).minusMinutes(10));
         return ResponseEntity.ok(result);
+    }
+
+    private void validate(Set<ValidationMessage> errors) throws GenesisException {
+        if(!errors.isEmpty()){
+            String errorMessage = errors.stream()
+                    .map(ValidationMessage::getMessage)
+                    .collect(Collectors.joining(System.lineSeparator() + " - "));
+
+            throw new GenesisException(
+                    400,
+                    "Input data JSON is not valid: %n - %s".formatted(errorMessage)
+            );
+        }
+    }
+
+    private void checkRequiredIds(Map<String, Object> body) throws GenesisException {
+        for(String requiredKey : List.of(
+                PARTITION_ID,
+                "questionnaireModelId",
+                INTERROGATION_ID,
+                "surveyUnitId",
+                "mode"
+        )){
+            if(body.get(requiredKey) == null){
+                throw new GenesisException(400, "No %s found in body".formatted(requiredKey));
+            }
+        }
     }
 
 }
